--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ footer {
     background: #333;
     color: white;
     text-align: center;
-    padding: 1rem;
+    padding: 0.5rem;
     position: fixed;
     width: 100%;
     bottom: 0;
@@ -58,4 +58,11 @@ footer {
 img {
     max-width: 200px;
     margin-top: 20px;
+}
+
+p{
+    width: 50%;
+    text-align: center;
+    position: static;
+    margin-left:25%;
 }
